--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/BarCharts/TimeBarChartComponent.razor
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/BarCharts/TimeBarChartComponent.razor
@@ -56,7 +56,7 @@
             }
         };
 
-        var barSet = new BarDataset<TimeTuple<double>>
+        var barSet = new BarDataset<TimePoint>
         {
             Label = "My time-double dataset",
             BackgroundColor = new[] { ColorUtil.RandomColorString(), ColorUtil.RandomColorString(), ColorUtil.RandomColorString(), ColorUtil.RandomColorString() },
@@ -69,7 +69,7 @@
 
         var now = DateTime.Now;
         var rnd = new Random();
-        barSet.AddRange(Enumerable.Range(2, 4).Select(i => new TimeTuple<double>((Moment)now.AddHours(i), rnd.NextDouble() * 4)));
+        barSet.AddRange(Enumerable.Range(2, 4).Select(i => new TimePoint(now.AddHours(i), rnd.NextDouble() * 4)));
         _config.Data.Datasets.Add(barSet);
     }
 }
