--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/Callbacks/LegendCallbacksComponent.razor
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/Callbacks/LegendCallbacksComponent.razor
@@ -77,7 +77,7 @@
             BorderColor = "#ffffff",
         };
 
-        pieSet.Data.AddRange(new double[] { 4, 5, 6, 7, 8 });
+        pieSet.AddRange(new double[] { 4, 5, 6, 7, 8 });
         _config.Data.Datasets.Add(pieSet);
     }
 
@@ -89,7 +89,7 @@
         var rand = new Random();
         var newVal = 1 + rand.NextDouble() * 10;
         _config.Data.Labels.Add(newVal.ToString(CultureInfo.InvariantCulture));
-        dataset.Data.Add(newVal);
+        dataset.Add(newVal);
         dataset.BackgroundColor = dataset.BackgroundColor.IndexedValues.Append(ColorUtil.RandomColorString()).ToArray();
 
         await _pieChartJs.Update();
@@ -101,7 +101,7 @@
         if (dataset == null || dataset.Data.Count < 1) return;
 
         _config.Data.Labels.RemoveAt(_config.Data.Labels.Count - 1);
-        dataset.Data.RemoveAt(dataset.Data.Count - 1);
+        dataset.RemoveAt(dataset.Data.Count - 1);
 
         await _pieChartJs.Update();
     }
@@ -121,7 +121,7 @@
         int count = _config.Data.Labels.Count;
 
         var rand = new Random();
-        pieSet.Data.AddRange(Enumerable.Range(0, count).Select(i => Convert.ToDouble(rand.Next(0, 10))));
+        pieSet.AddRange(Enumerable.Range(0, count).Select(i => Convert.ToDouble(rand.Next(0, 10))));
         pieSet.BackgroundColor = Enumerable.Range(0, count).Select(i => ColorUtil.RandomColorString()).ToArray();
 
         _config.Data.Datasets.Add(pieSet);
