--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/DoughnutChartComponent.razor
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/DoughnutChartComponent.razor
@@ -43,7 +43,7 @@
             BorderColor = "#ffffff"
         };
 
-        doughnutSet.Data.AddRange(new double[] { 4, 5, 6, 7 });
+        doughnutSet.AddRange(new double[] { 4, 5, 6, 7 });
         _config.Data.Datasets.Add(doughnutSet);
     }
 
