--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/BarCharts/SimpleBarChartComponent.razor
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/BarCharts/SimpleBarChartComponent.razor
@@ -3,7 +3,6 @@
 @using ChartJs.Blazor.ChartJS.Common.Axes
 @using ChartJs.Blazor.ChartJS.Common.Axes.Ticks
 @using ChartJs.Blazor.ChartJS.Common.Properties
-@using ChartJs.Blazor.ChartJS.Common.Wrappers
 @using ChartJs.Blazor.Charts
 @using ChartJs.Blazor.Util
 
@@ -26,7 +25,7 @@
 
     private BarConfig _barChartConfig;
     private ChartJsBarChart _barChart;
-    private BarDataset<DoubleWrapper> _barDataSet;
+    private BarDataset<double> _barDataSet;
 
     protected override void OnInitialized()
     {
@@ -65,7 +64,7 @@
 
         _barChartConfig.Data.Labels.AddRange(new[] { "A", "B", "C", "D" });
 
-        _barDataSet = new BarDataset<DoubleWrapper>
+        _barDataSet = new BarDataset<double>
         {
             Label = "My double dataset",
             BackgroundColor = new[] { ColorUtil.RandomColorString(), ColorUtil.RandomColorString(), ColorUtil.RandomColorString(), ColorUtil.RandomColorString() },
@@ -76,7 +75,7 @@
             BorderColor = "#ffffff"
         };
 
-        _barDataSet.AddRange(new double[] { 8, 5, 3, 7 }.Wrap());
+        _barDataSet.AddRange(new double[] { 8, 5, 3, 7 });
         _barChartConfig.Data.Datasets.Add(_barDataSet);
     }
 
@@ -84,7 +83,7 @@
     {
         var nowSecond = DateTime.Now.Second;
         _barChartConfig.Data.Labels.Add(nowSecond.ToString());
-        _barDataSet.Add(new DoubleWrapper(nowSecond));
+        _barDataSet.Add(nowSecond);
 
         await _barChart.Update();
     }
