--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/BarCharts/TimeBarChartComponent.razor
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/BarCharts/TimeBarChartComponent.razor
@@ -10,11 +10,15 @@
 
 <h1>Time Bar Chart</h1>
 
-<ChartJsBarChart @ref="_barChartJs" Config="@_config" Width="600" Height="300" />
+<Chart @ref="_barChartJs"
+       Config="@_config"
+       TConfig="ChartJs.Blazor.ChartJS.BarChart.BarConfig"
+       Width="600"
+       Height="300" />
 
 @code {
     private BarConfig _config;
-    private ChartJsBarChart _barChartJs;
+    private Chart<BarConfig> _barChartJs;
 
     protected override void OnInitialized()
     {
@@ -40,9 +44,9 @@
                             },
                             Offset = true
                         }
-                },
-                YAxes = new List<CartesianAxis>
-                {
+                    },
+                    YAxes = new List<CartesianAxis>
+                    {
                         new BarLinearCartesianAxis
                         {
                             Ticks = new LinearCartesianTicks
