--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/BubbleChartComponent.razor
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/BubbleChartComponent.razor
@@ -6,11 +6,16 @@
 <div class="row">
     <button class="btn btn-primary" @onclick="OnClick">Add Dataset</button>
 </div>
-<ChartJsBubbleChart @ref="_bubbleChartJs" Config="@_config" Width="600" Height="300" />
+
+<Chart @ref="_bubbleChartJs"
+        Config="@_config"
+        TConfig="BubbleConfig"
+        Width="600"
+        Height="300"/>
 
 @code {
     private BubbleConfig _config;
-    private ChartJsBubbleChart _bubbleChartJs;
+    private Chart<BubbleConfig> _bubbleChartJs;
 
     private Random _rand = new Random();
 
@@ -23,7 +28,7 @@
                 Title = new ChartJS.Common.Properties.OptionsTitle
                 {
                     Display = true,
-                    Text = new[] { "Simple Bar Chart", "with two lines of title" },
+                    Text = new[] {"Simple Bar Chart", "with two lines of title"},
                     FontStyle = ChartJS.Common.Enums.FontStyle.Italic
                 }
             }
