--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/BarCharts/HorizontalBarChartComponent.razor
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/BarCharts/HorizontalBarChartComponent.razor
@@ -10,15 +10,16 @@
     <button class="btn btn-primary" @onclick="AddData">Add Data</button>
     <button class="btn btn-primary" @onclick="RemoveData">Remove Data</button>
 </div>
-<ChartJsBarChart @ref="_barChart"
-                 Config="@_barChartConfig"
-                 Width="600"
-                 Height="300" />
+<Chart @ref="_barChart"
+       Config="@_barChartConfig"
+       TConfig="ChartJs.Blazor.ChartJS.BarChart.BarConfig"
+       Width="600"
+       Height="300" />
 
 @code
 {
     private BarConfig _barChartConfig;
-    private ChartJsBarChart _barChart;
+    private Chart<BarConfig> _barChart;
     private BarDataset<double> _barDataSet;
 
     protected override Task OnInitializedAsync()
