Fixed a typo on the welcome page

--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/Welcome.razor
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/Welcome.razor
@@ -7,7 +7,7 @@
 
 <div class="container-fluid bg-1 text-center">
     <h2>
-        Welcome to the ChatJs.Blazor Samples.
+        Welcome to the ChartJs.Blazor Samples.
     </h2>
 </div>
 
