--- a/samples/ServerSide/ChartJs.Blazor.Sample.ServerSide/Pages/Test.razor
+++ b/samples/ServerSide/ChartJs.Blazor.Sample.ServerSide/Pages/Test.razor
@@ -88,7 +88,7 @@
 
     private async Task AddData()
     {
-        var dataset = _config.Data.Datasets.LastOrDefault();
+        var dataset = _config.Data.Datasets.LastOrDefault() as PieDataset;
         if (dataset == null) return;
 
         var rand = new Random();
@@ -102,7 +102,7 @@
 
     private async Task RemoveData()
     {
-        var dataset = _config.Data.Datasets.LastOrDefault();
+        var dataset = _config.Data.Datasets.LastOrDefault() as PieDataset;
         if (dataset == null || dataset.Data.Count < 1) return;
 
         _config.Data.Labels.RemoveAt(_config.Data.Labels.Count - 1);
