--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/Callbacks/LegendCallbacksComponent.razor
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/Callbacks/LegendCallbacksComponent.razor
@@ -87,7 +87,7 @@
 
     private async Task AddData()
     {
-        var dataset = _config.Data.Datasets.LastOrDefault();
+        var dataset = _config.Data.Datasets.LastOrDefault() as PieDataset;
         if (dataset == null) return;
 
         var rand = new Random();
@@ -101,7 +101,7 @@
 
     private async Task RemoveData()
     {
-        var dataset = _config.Data.Datasets.LastOrDefault();
+        var dataset = _config.Data.Datasets.LastOrDefault() as PieDataset;
         if (dataset == null || dataset.Data.Count < 1) return;
 
         _config.Data.Labels.RemoveAt(_config.Data.Labels.Count - 1);
